--- a/11-MY451_A.rmd
+++ b/11-MY451_A.rmd
@@ -8,7 +8,7 @@
 
 Some general instructions on computing and the SPSS package are given
 first below. It makes most sense to read these together with the
-instructions for individual computer classes, which begin in Section \@ref(p-class1).
+instructions for individual computer classes, which begin in Section \@ref(ss-class1).
 
 ### General instructions
 
@@ -340,7 +340,7 @@ menus. Two easy ways of doing so are
 
 \newpage
 
-### WEEK 2 class: Descriptive statistics for categorical data, and entering data {#p-class1}
+### WEEK 2 class: Descriptive statistics for categorical data, and entering data {#ss-class1}
 
 #### Data set {-}
 
@@ -988,8 +988,8 @@ respondents’ voting intentions, obtained after the debates had ended
     they would vote Liberal Democrat. We will compare it to 0.23, the
     proportion of the vote the party actually received in 2010. The
     analysis is thus one-sample inference on a population proportion,
-    and the relevant formulas are (\@ref(ztestp))
-    for the test statistic and (\@ref(cip2)) for the
+    and the relevant formulas are (\@ref(eq:ztestp))
+    for the test statistic and (\@ref(eq:cip2)) for the
     confidence interval.
 
     -   Begin by creating a frequency table of *VOTE\_LIBDEM*. This
@@ -999,7 +999,7 @@ respondents’ voting intentions, obtained after the debates had ended
 
     -   For the one-sample significance test, the value of $\pi$ under
         the null hypothesis is $\pi_{0}=0.230$. Using equation
-        (\@ref(ztestp)), the value of the test statistic $z$ is thus
+        (\@ref(eq:ztestp)), the value of the test statistic $z$ is thus
         given by the calculation
         $$z = \frac{0.260-0.230}{\sqrt{0.230\times (1-0.230)/3226}}$$
         Calculate this using a calculator. The result should be
@@ -1016,7 +1016,7 @@ respondents’ voting intentions, obtained after the debates had ended
 
     -   Calculate a 95% confidence interval for the population
         proportion of prospective Liberal Democrat voters, using
-        equation (\@ref(cip2)).
+        equation (\@ref(eq:cip2)).
 
     What do you conclude about the proportions of prospective and actual
     Liberal Democrat voters? Why might the two differ from each other?
@@ -1029,8 +1029,8 @@ respondents’ voting intentions, obtained after the debates had ended
     the debates with those who did not, using the two-sample methods of
     analysis discussed in Section \@ref(s-probs-2samples). The formula of
     the $z$-test statistic for testing the hypothesis of equal
-    population proportions is thus (\@ref(ztestDpi)), and a confidence interval for the difference of
-    the porportions is (\@ref(ciDpi)).
+    population proportions is thus (\@ref(eq:ztestDpi)), and a confidence interval for the difference of
+    the porportions is (\@ref(eq:ciDpi)).
 
     -   Begin by calculating the relevant sample proportions. The
         easiest way to do this is by creating a two-way contingency
@@ -1046,8 +1046,8 @@ respondents’ voting intentions, obtained after the debates had ended
 
         where 1 denotes respondents who did not watch any of the debates
         and 2 those who watched at least some. The pooled estimated
-        proportion $\hat{\pi}$ (formula \@ref(phat2sample)) used in the
-        test statistic (\@ref(ztestDpi)) is here $\hat{\pi}=0.260$, shown
+        proportion $\hat{\pi}$ (formula \@ref(eq:phat2sample)) used in the
+        test statistic (\@ref(eq:ztestDpi)) is here $\hat{\pi}=0.260$, shown
         on the “Total” row.
 
     -   Calculate the test statistic, its $P$-value and a 95% confidence
